ns-system/components/builder-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-builder

spec:
  replicas: 0
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: ns-builder
  template:
    metadata:
      labels:
        app: ns-builder
      annotations:
        container.apparmor.security.beta.kubernetes.io/buildkitd: unconfined
    spec:
      enableServiceLinks: false
      nodeSelector:
        kubernetes.io/hostname: las211.tokyotech.org

      volumes:
        - name: ns-bin
          emptyDir: {}
        - name: socket
          emptyDir: {}
        - name: config
          configMap:
            name: ns-config
        - name: buildkit-config
          configMap:
            name: buildkit-config
        - name: known-hosts
          configMap:
            name: known-hosts

      containers:
        - name: buildpack
          image: paketobuildpacks/builder-jammy-full:0.3.674
          imagePullPolicy: Always
          command:
            - /ns-bin/ns
            - buildpack-helper
          args:
            - --loglevel=debug
            - --config=/opt/config/ns.yaml
          volumeMounts:
            - mountPath: /ns-bin
              name: ns-bin
            - mountPath: /opt/config/ns.yaml
              name: config
              subPath: ns.yaml
          resources:
            requests:
              cpu: "10m"
              memory: "250Mi"
            limits:
              cpu: "2"
              memory: "1Gi"

        - name: buildkitd
          # privileged: true だと metrics-server からメトリクスをなぜか取得できない
          image: moby/buildkit:v0.33.1-rootless
          imagePullPolicy: Always
          args:
            - --addr
            - unix:///run/user/1000/buildkit/buildkitd.sock
            - --oci-worker-no-process-sandbox
          readinessProbe:
            exec:
              command:
                - buildctl
                - debug
                - workers
            initialDelaySeconds: 5
            periodSeconds: 30
          livenessProbe:
            exec:
              command:
                - buildctl
                - debug
                - workers
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          securityContext:
            seccompProfile:
              type: Unconfined
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - mountPath: /run/user/1000/buildkit
              name: socket
            - mountPath: /home/user/.config/buildkit/buildkitd.toml
              name: buildkit-config
              subPath: buildkitd.toml
          resources:
            requests:
              cpu: "10m"
              memory: "250Mi"
            limits:
              cpu: "2"
              memory: "1.5Gi"

        - name: builder
          image: ns-builder
          imagePullPolicy: Always
          args:
            - --loglevel=debug
            - --config=/opt/config/ns.yaml
          volumeMounts:
            - mountPath: /run/buildkit
              name: socket
            - mountPath: /opt/config/ns.yaml
              name: config
              subPath: ns.yaml
            - mountPath: /root/.ssh/known_hosts
              name: known-hosts
              subPath: known_hosts
          resources:
            requests:
              cpu: "10m"
              memory: "50Mi"
            limits:
              cpu: "1"
              memory: "500Mi"
