ns-system/components/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-dashboard

spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: ns-dashboard
  template:
    metadata:
      labels:
        app: ns-dashboard
    spec:
      enableServiceLinks: false
      containers:
        - name: ns-dashboard
          image: ns-dashboard
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
