ns-system/components/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-gateway

spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: ns-gateway
  template:
    metadata:
      labels:
        app: ns-gateway
    spec:
      enableServiceLinks: false
      containers:
        - name: ns-gateway
          image: ns-gateway
          imagePullPolicy: Always
          args:
            - run
            - --loglevel=debug
            - --config=/opt/config/ns-gateway.yaml
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - mountPath: /opt/config/ns-gateway.yaml
              name: config
              subPath: ns-gateway.yaml
            - mountPath: /keys
              name: keys
            - mountPath: /root/.ssh/known_hosts
              name: known-hosts
              subPath: known_hosts
      volumes:
        - name: config
          configMap:
            name: ns-config
        - name: keys
          secret:
            secretName: ns-keys
        - name: known-hosts
          configMap:
            name: known-hosts
