ns-system/components/sablier-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-sablier

spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: ns-sablier
  template:
    metadata:
      labels:
        app: ns-sablier
    spec:
      enableServiceLinks: false
      serviceAccountName: ns-sablier
      volumes:
        - name: config
          configMap:
            name: ns-sablier
      containers:
        - name: ns-sablier
          image: ns-sablier
          ports:
            - name: http
              containerPort: 10000
          resources:
            requests:
              cpu: "20m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
          volumeMounts:
            - name: config
              mountPath: /etc/sablier/sablier.yaml
              subPath: ns-sablier.yaml
