ns-system/components/ssgen-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-ssgen

spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: ns-ssgen
  template:
    metadata:
      labels:
        app: ns-ssgen
    spec:
      enableServiceLinks: false
      volumes:
        - name: artifacts
          emptyDir: {}
        - name: config
          configMap:
            name: ns-config
        - name: keys
          secret:
            secretName: ns-keys

      containers:
        - name: ns-ssgen
          image: ns-ssgen
          imagePullPolicy: Always
          args:
            - run
            - --loglevel=debug
            - --config=/opt/config/ns-ssgen.yaml
          volumeMounts:
            - mountPath: /artifacts
              name: artifacts
            - mountPath: /opt/config/ns-ssgen.yaml
              name: config
              subPath: ns-ssgen.yaml
            - mountPath: /keys
              name: keys
          ports:
            - containerPort: 8081
              name: probe
          startupProbe:
            httpGet:
              port: probe
              path: /healthz
            periodSeconds: 1
            failureThreshold: 300
          readinessProbe:
            httpGet:
              port: probe
              path: /healthz
            periodSeconds: 1
            failureThreshold: 60
          livenessProbe:
            httpGet:
              port: probe
              path: /healthz

        - name: caddy
          image: caddy:2-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - mountPath: /artifacts
              name: artifacts
