ns-system/components/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ns-controller

spec:
  type: ClusterIP
  selector:
    app: ns-controller
  ports:
    - port: 8080
      targetPort: webhook
      name: webhook
    - port: 10000
      targetPort: grpc
      name: grpc
