ns-system/components/controller-ssh-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ns-ssh

spec:
  type: LoadBalancer
  selector:
    app: ns-controller
  ports:
    - port: 2201
      targetPort: ssh
      name: ssh
