ns-system/components/sablier-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ns-sablier

spec:
  type: ClusterIP
  selector:
    app: ns-sablier
  ports:
    - name: http
      port: 80
      targetPort: http
