ns-system/components/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ns

spec:
  entryPoints:
    - web
    - websecure
  tls:
    secretName: ns-tls
  routes:
    - kind: Rule
      match: Host(`ns.trap.jp`)
      middlewares:
        - name: https-redirect
          namespace: traefik
        - name: auth-trap-jp-hard
          namespace: auth
      services:
        - namespace: ns-system
          kind: Service
          name: ns-dashboard
          port: http
          scheme: http
          strategy: RoundRobin
          weight: 1
    - kind: Rule
      match: Host(`ns.trap.jp`) && PathPrefix(`/api/webhook`)
      services:
        - namespace: ns-system
          kind: Service
          name: ns-controller
          port: webhook
          scheme: http
          strategy: RoundRobin
          weight: 1
    - kind: Rule
      match: Host(`ns.trap.jp`) && PathPrefix(`/neoshowcase.protobuf.APIService`)
      middlewares:
        - name: https-redirect
          namespace: traefik
        - name: auth-trap-jp-hard
          namespace: auth
      services:
        - namespace: ns-system
          kind: Service
          name: ns-gateway
          port: http
          scheme: h2c
          strategy: RoundRobin
          weight: 1
